# cookiecutter-pipproject

./: cookiecutter.json
{{cookiecutter.app_name}}/: .gitignore  Makefile  README.rst  setup.cfg  setup.py
