[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:README.rst]
search = version number: '{current_version}'
replace = version number: '{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal=1

[metadata]
description-file=README.rst
